lang/tests/compile_fail/realloc_bad_unchecked.stderr
error[E0277]: the trait bound `quasar_lang::accounts::UncheckedAccount: SupportsRealloc` is not satisfied
 --> tests/compile_fail/realloc_bad_unchecked.rs:9:18
  |
6 | #[derive(Accounts)]
  |          -------- required by a bound introduced by this call
...
9 |     pub account: UncheckedAccount,
  |                  ^^^^^^^^^^^^^^^^ the trait `SupportsRealloc` is not implemented for `quasar_lang::accounts::UncheckedAccount`
  |
  = help: the following other types implement trait `SupportsRealloc`:
            Account<T>
            InterfaceAccount<T>
note: required by a bound in `quasar_lang::ops::realloc::Op::<'a>::apply`
 --> src/ops/realloc.rs
  |
  |     pub fn apply<F, R>(&self, field: &mut F, ctx: &OpCtx<'_, R>) -> Result<(), ProgramError>
  |            ----- required by a bound in this associated function
  |     where
  |         F: AccountLoad + SupportsRealloc + crate::traits::Space,
  |                          ^^^^^^^^^^^^^^^ required by this bound in `Op::<'a>::apply`

error[E0277]: the trait bound `quasar_lang::accounts::UncheckedAccount: quasar_lang::prelude::Space` is not satisfied
 --> tests/compile_fail/realloc_bad_unchecked.rs:9:18
  |
6 | #[derive(Accounts)]
  |          -------- required by a bound introduced by this call
...
9 |     pub account: UncheckedAccount,
  |                  ^^^^^^^^^^^^^^^^ the trait `quasar_lang::prelude::Space` is not implemented for `quasar_lang::accounts::UncheckedAccount`
  |
  = help: the following other types implement trait `quasar_lang::prelude::Space`:
            Account<T>
            InterfaceAccount<T>
note: required by a bound in `quasar_lang::ops::realloc::Op::<'a>::apply`
 --> src/ops/realloc.rs
  |
  |     pub fn apply<F, R>(&self, field: &mut F, ctx: &OpCtx<'_, R>) -> Result<(), ProgramError>
  |            ----- required by a bound in this associated function
  |     where
  |         F: AccountLoad + SupportsRealloc + crate::traits::Space,
  |                                            ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Op::<'a>::apply`
